# SimpleSketch

./: .gitignore  README.md  pyproject.toml
.script/: clean.sh
examples/: simple_examples.ipynb
src/SimpleSketch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/simple_sketch/: simple_sketch.py
src/simple_sketch/simple_sketch_cli/: simple_sketch_cli.py
src/simple_sketch/simple_sketch_gui/: simple_sketch_gui.py
src/simple_sketch/synthesis/: cegis.py  specification.py  synthesizer.py
src/simple_sketch/verifier/: wp.py
src/simple_sketch/while_lang/: while_language.py
src/simple_sketch/while_lang/syntax/: syntax.py  while_lang.lark
src/simple_sketch/z3_handler/: z3_handler.py
src/simple_sketch/z3_handler/z3_text_parser/: z3_text_parser.py
tests/: __init__.py  test_cegis.py
